--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@
 
 body{
     background: linear-gradient(to right, #000000, #585858, #000000) !important;
-    
+    background-image: url("./shared image.png")
 
 }
 
